# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: changelog-check.yaml  python-pre-commit.yaml  python-test.yaml
